<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/margin_20"
    android:layout_marginLeft="@dimen/margin_16"
    android:layout_marginRight="@dimen/margin_16"
    android:id="@+id/card_holiday"
    card_view:cardBackgroundColor="@color/card_color"
    card_view:cardCornerRadius="@dimen/corner_radius"
    android:foreground="?selectableItemBackground">

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TableLayout
        android:id="@+id/holidaysContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_16"
        android:elevation="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dateLabel"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/localNameLabel"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"
                tools:text="@tools:sample/lorem"/>

            <TextView
                android:id="@+id/localName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"
                tools:text="@tools:sample/lorem" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nameLabel"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@tools:sample/lorem"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fixedLabel"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/fixed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"
                tools:text="@tools:sample/lorem" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/globalLabel"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/global"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@tools:sample/lorem"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/launchYearLabel"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/launchYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/list_name_text_size"
                android:textColor="@color/black"
                tools:text="@tools:sample/lorem" />
        </TableRow>

    </TableLayout>
</androidx.cardview.widget.CardView>